--- a/lagoujiaoyu/深入浅出Java虚拟机/06 深入剖析：垃圾回收你真的了解吗？(上).md
+++ b/lagoujiaoyu/深入浅出Java虚拟机/06 深入剖析：垃圾回收你真的了解吗？(上).md
@@ -22,14 +22,14 @@
  现在的垃圾回收器，都会在物里上或逻辑上，把这两类对象进行区分。把死的快的对象所占的区域，叫作年轻代(Young generation)。把其他活得长的对象所占的区域，叫作老年代(Old generation)。老年代在有些地方也会叫作Tenured Generation。
 8. 年轻代
  年轻代使用的垃圾回收算法是复制算法。因为年轻代发生GC后，只会有非常少的对象存活，复制这部分对象是非常高效的。复制算法会造成一定的空间浪费，所以年轻代中间也会分很多区域
- ![](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/Young%20Generation.png)
+ ![Young Generation](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/Young%20Generation.png)
  年轻代划分：一个伊甸园空间(Eden)，两个幸存者空间(Survivor)。当年轻代中的Eden区分配满的时候，就会触发年轻代的GC(Minor GC)。具体过程如下：
  - 在Eden区执行了第一次GC之后，存活的对象会被移动到其中一个Survivior分区(以下简称from)；
  - Eden区再次GC，这时会采用复制算法，将Eden和from区一起清理。存活的对象会被复制到to区；接下来，只需要清空Eden和from区就可以了。
 
  Minor GC过程中，总会有一个Survivor分区是空置的。Eden、from、to的默认比例是8 : 1 : 1，所以只会造成10%的浪费。这个比例是由参数-XX:SurvivorRatio进行配置的，默认为8。
  TLAB的全称是Thread Local Allocation Buffer，JVM默认给每个线程开辟一个buffer区域，用来加速对象分配。这个buffer就在Eden区中。类似Java中的ThreadLocal，避免了对公共区域的操作，以及一些锁竞争。
- ![](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/TLAB%E5%9B%BE%E8%A7%A3.png)
+ ![TLAB图解](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/TLAB%E5%9B%BE%E8%A7%A3.png)
  对象的分配优先在TLAB上分配，但TLAB通常都很小，所以对象相对比较大的时候，会在Eden区的共享区域进行分配。
  TLAB是一种优化技术，类似的优化还有对象的栈上分配(逃逸分析，默认开启，就是把没有逃逸的对象在栈上分配)。
 9. 老年代
@@ -44,7 +44,7 @@
  卡表(Card Table)就是用于标记卡页状态的一个集合，每个卡表项对应一个卡页。
  JVM中，老年代被分成众多卡页。如果年轻代有对象分配，而且老年代有对象指向这个新对象，那么这个老年代对象所对应内存的卡页就会标识为dirty。卡表只需要非常小的存储空间就可以保留这些状态。垃圾回收时就可以先读这个卡表，进行快速判断。
 11. HotSpot垃圾回收器
- ![](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/%E5%88%86%E4%BB%A3%E5%8F%8A%E5%9E%83%E5%9C%BE%E5%9B%9E%E6%94%B6%E5%9B%BE.jpg)
+ ![分代及垃圾回收图](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/%E5%88%86%E4%BB%A3%E5%8F%8A%E5%9E%83%E5%9C%BE%E5%9B%9E%E6%94%B6%E5%9B%BE.jpg)
  - 年轻代垃圾回收器
      - Serial垃圾收集器：处理GC的只有一条线程，并且在垃圾回收的过程中暂停一切用户线程。多用于客户端。
      - ParNew垃圾收集器：是Serial的多线程版本。多条GC线程并行的进行垃圾清理。清理过程依然要停止所有用户线程。追求“低停顿时间”。
@@ -69,7 +69,7 @@ Java HotSpot(TM) 64-Bit Server VM warning: Option UseConcMarkSweepGC was depreca
  - -XX:+UseConcMarkSweepGC 表示年轻代使用ParNew，老年代使用CMS；
  - -XX:+UseG1GC 使用G1垃圾收集器；
  - -XX:+UseZGC 使用ZGC垃圾收集器。
- ![](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/GC%E5%91%BD%E4%BB%A4.jpg)
+ ![GC命令](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/GC%E5%91%BD%E4%BB%A4.jpg)
  目前使用最多的JDK还是Java8，线上最多的垃圾回收器就有CMS和G1，以及Java8默认的Parallel Scavenge。
      - CMS的设置参数：-XX:+UseConcMarkSweepGC
      - Java8的默认参数：-XX:+UseParallelGC
