--- a/lagoujiaoyu/深入浅出Java虚拟机/09 案例实战：面对突如其来的GC问题如何下手解决.md
+++ b/lagoujiaoyu/深入浅出Java虚拟机/09 案例实战：面对突如其来的GC问题如何下手解决.md
@@ -30,7 +30,7 @@
  面试中问道GC日志使用问题，可以如下方式说：
  项目中会输出详细日志，并加上GC日志时间戳，还有反应对象晋升情况和堆详细信息的日志；另外还会设置OOM时自动Dump堆栈。
 2. GC日志解读(以G1回收器日志为例)
- ![](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/G1%E6%97%A5%E5%BF%97Demo.jpg)
+ ![G1日志Demo](https://raw.githubusercontent.com/hujiapeng/imgs/master/lagou/%E6%B7%B1%E5%85%A5%E6%B5%85%E5%87%BAJava%E8%99%9A%E6%8B%9F%E6%9C%BA/G1%E6%97%A5%E5%BF%97Demo.jpg)
  - 1：表示GC发生的时间
  - 2：表示G1的“转移暂停:混合模式”，停顿了约223ms
  - 3：表明由8个work线程并行执行，消耗了214ms
