--- a/geekbang/视频/初识Shell编程_尹会生/10环境变量配置文件.md
+++ b/geekbang/视频/初识Shell编程_尹会生/10环境变量配置文件.md
@@ -1,5 +1,5 @@
 1. 环境变量配置文件：在/etc下的是所有用户通用的
-2. 五类配置文件：/etc/profile,/etc/bashrc,/etc/profile.d/(这个是环境变量目录), ~/.bash_profile,~/.bashrc。其中/etc/bashrc和~/.bashrc是在非Shell用户(也是非登录用户)进入Linux系统后起作用的配置。非登录用户使用的Shell是/bin/nologin，不能执行Shell命令，也就是不能操作Linux系统。用途如创建了一些ftp服务器用户，只能访问ftp服务器，不能操作Linux
+2. 五类配置文件：/etc/profile,/etc/bashrc,/etc/profile.d/(这个是环境变量目录), \~/.bash_profile,\~/.bashrc。其中/etc/bashrc和 \~/.bashrc是在非Shell用户(也是非登录用户)进入Linux系统后起作用的配置。非登录用户使用的Shell是/bin/nologin，不能执行Shell命令，也就是不能操作Linux系统。用途如创建了一些ftp服务器用户，只能访问ftp服务器，不能操作Linux
 3. su - 登录名 通过Shell用户登录，如果不加中间的短横，则是非Shell用户登录
 4. 编辑上述四个文件，首行打印输出标识(echo 文件名)，查看加载情况
 我们一般可以在.bashrc下使用别名变量指定命令，如``` alias rm='rm -i' ```，这样在执行rm删除操作时，就会有交互模式。注意加载顺序，防止变量被覆盖
