--- a/geekbang/专栏/Java业务开发常见错误100例/08 判等问题：程序里如何确定你就是你？.md
+++ b/geekbang/专栏/Java业务开发常见错误100例/08 判等问题：程序里如何确定你就是你？.md
@@ -1,1 +1,56 @@
 一、注意equals和==的区别
+1. 注意，比较值的内容，除了基本类型只能使用==外，其他类型(包括基本类型对应的引用类型，如Integer)都要使用equals。
+2. JVM对[-128,127]范围的整型做了缓存，即通过Integer.valueOf获取到的该范围的值都是缓存中的。代码中如果使用Integer a=127，编译器会转换为Integer.valueOf(127)。可以通过设置JVM参数-XX:AutoBoxCacheMax=值，改变JVM中缓存范围
+3. String类型的数据会在JVM中缓存，放在常量池中。直接new String会创建新的对象。如果调用String的intern方法，会直接将字符串放入常量池，通过intern也能从常量池中获取字符串，如下测试代码输出都为true
+    ```
+    String str1 = new String("1").intern();
+    String str2 = new String("1").intern();
+    String str3="1";
+    System.out.println(str1==str2);
+    System.out.println(str1==str3);
+    ```
+4. 注意业务代码中慎用intern方法，可能会产生性能问题。常量池是一个固定容量的Map，设置JVM参数-XX:+PrintStringTableStatistic可以在程序退出时打印字符串常量表的统计信息，如果容量太小，那么每一个桶内字符串数量会很多，导致搜索起来很慢。这个桶的数量可以通过JVM参数-XX:StringTableSize来设置
+
+二、实现一个equals并不简单
+1. 自定义类如果不重写equals方法，其调用时就是调用的Object类中的equals方法
+    ```
+    public boolean equals(Object obj) {
+        return (this == obj);
+    }
+    ```
+2. 重写equals方法应该注意的点
+ - 考虑到性能，可以先进行指针判断，如果对象是同一个那么直接返回true
+ - 需要对另一方进行判空，空对象和自身进行比较，结果一定是false
+ - 需要判断两个对象类型，如果类型不同，那么直接返回false
+ - 确保类型相同情况下再进行类型强制转换，然后逐一判断所有字段
+3. 使用Point类来实现重写equals方法案例
+   ```
+   public class Point {
+       private int x;
+       private int y;
+   ······
+       @Override
+       public boolean equals(Object o) {
+           if (this == o) return true;
+           if (o == null || getClass() != o.getClass()) return false;
+           Point point = (Point) o;
+           if (x != point.x) return false;
+           return y == point.y;
+       }
+   ```
+4. hashCode和equals要配对实现
+   ```
+   @Override
+   public int hashCode() {
+       return Objects.hash(x,y);
+   }
+   ```
+5. 注意compareTo和equals的逻辑一致性，如上equals方法，对x和y都做了处理，且x在y前面，所以compareTo的比较逻辑也要一致，如下
+   ```
+   @Override
+   public int compareTo(Point another) {
+       return Comparator.comparingInt(Point::getX)
+               .thenComparingInt(Point::getY)
+               .compare(this, another);
+   }
+   ```
