--- a/geekbang/专栏/数据结构与算法之美/01复杂度分析(上).md
+++ b/geekbang/专栏/数据结构与算法之美/01复杂度分析(上).md
@@ -20,6 +20,6 @@
    - O(logn)、O(nlogn)，对数阶时间复杂度，由于对数可以互相转换，大O表示对数阶时间复杂度时忽略对数“底”，统一表示为O(logn)。根据乘法法则，如果一段代码的时间复杂度为O(logn)，循环执行n遍，时间复杂度就是O(nlogn)。
    - O(m+n)、O(m*n)，代码中存在两种数据规模的代码段平行关系运行，无嵌套，无法评估谁的量级大，这种情况下就不能简单利用加法法则了，要写成O(m+n)，针对这种情况的加法法则要改为T1(m) + T2(n) = O(f(m) + g(n))。如果代码中两种数据规模代码是嵌套式的，那么乘法法则继续有效：T1(m)*T2(n) = O(f(m) * f(n))。
 
-   <img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\1594016303642.png" alt="1594016303642" style="zoom:50%;" />
-   <img src="C:\Users\Administrator\AppData\Roaming\Typora\typora-user-images\1594017072648.png" alt="1594017072648" style="zoom:50%;" />
+   ![复杂度量级分类](https://github.com/hujiapeng/imgs/blob/master/geekbang/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95%E4%B9%8B%E7%BE%8E/%E5%A4%8D%E6%9D%82%E5%BA%A6%E9%87%8F%E7%BA%A7%E5%88%86%E7%B1%BB.jpg?raw=true)
+   ![时间复杂度坐标系](https://github.com/hujiapeng/imgs/blob/master/geekbang/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95%E4%B9%8B%E7%BE%8E/%E6%97%B6%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6%E5%9D%90%E6%A0%87%E7%B3%BB.jpg?raw=true)
 8. 空间复杂度，全称是渐进式空间复杂度，表示算法的存储空间与数据规模之间的增长关系。我们常见的空间复杂度就是 O(1)、O(n)、O(n^2)，像 O(logn)、O(nlogn) 这样的对数阶复杂度平时都用不到。
